# AviSynth-tcolormask

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
msvc/: tcolormask.sln  tcolormask.vcxproj  tcolormask.vcxproj.filters
tcolormask/: tcolormask.cpp  tcolormask.h  tcolormask.rc  tcolormask.vcxproj  tcolormask_avx2.cpp  tcolormask_avx512.cpp  tcolormask_sse2.cpp
